# translator

./: .gitignore  CMakeLists.txt  Correct1.txt  Correct2.txt  Correct3.txt  Incorrect1.txt  Incorrect2.txt  Incorrect3.txt  Incorrect4.txt  SemStack.hpp  Semanter.hpp  TAO.cpp  TAO.hpp  TableFunction.hpp  TableMethods.hpp  grammar.txt  input.txt  keywords.txt  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  poliz.cpp  poliz.hpp  semanter.cpp  semanter.hpp  tokens.hpp  treeTID.hpp  trie.cpp  trie.hpp  typeinfo.hpp  vm.cpp  vm.hpp
tests/: Correct1.txt  Correct2.txt  Correct3.txt  Incorrect5.txt
